frontend/test/should_pass/bitbucket18b.gm
node class MyNode {
    procedure myProcedure(var bar:string){
        def ref myArray:array<string> = array<string>["foo", bar, baz];
        return();
    }
	baz:string;
}