frontend/test/should_fail/computations_no_assign_func_methodn2.gm
node class N
{
	x:array<int>;	
}

node class NN
{
	function bar(n:N) : int
	{
		n.x[0] = 42;
		return(n.x[0]);
	}
}
